update chat , product ,details

--- a/Online Sales Management System/Views/Shared/_Header.cshtml
+++ b/Online Sales Management System/Views/Shared/_Header.cshtml
@@ -219,10 +219,10 @@
                                 <li class="nav-item">
                                     <a href="/" class="active" aria-label="Toggle navigation">Home</a>
                                 </li>
+                                <
                                 <li class="nav-item">
-                                    <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
-                                       data-bs-target="#submenu-1-2" aria-controls="navbarSupportedContent"
-                                       aria-expanded="false" aria-label="Toggle navigation">Pages</a>
+                                    <a href="/Product/Index" aria-label="Toggle navigation">Product</a>
+                                </li>
                                     <ul class="sub-menu collapse" id="submenu-1-2">
                                         <li class="nav-item"><a href="#">About Us</a></li>
                                         <li class="nav-item"><a href="#">Faq</a></li>
