--- a/Online Sales Management System/Views/Shared/_Layout.cshtml
+++ b/Online Sales Management System/Views/Shared/_Layout.cshtml
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
-<html class="no-js" lang="zxx">
-
+<html class="no-js" lang="vi">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -14,6 +13,8 @@
     <link rel="stylesheet" href="~/assets/css/tiny-slider.css" />
     <link rel="stylesheet" href="~/assets/css/glightbox.min.css" />
     <link rel="stylesheet" href="~/assets/css/main.css" />
+
+    <link rel="stylesheet" href="~/css/chat-widget.css" asp-append-version="true" />
 </head>
 
 <body>
@@ -25,11 +26,14 @@
             </div>
         </div>
     </div>
+
     <partial name="_Header" />
 
     @RenderBody()
 
     <partial name="_Footer" />
+
+    <partial name="_ChatWidget" />
 
     <a href="#" class="scroll-top">
         <i class="lni lni-chevron-up"></i>
@@ -39,6 +43,8 @@
     <script src="~/assets/js/tiny-slider.js"></script>
     <script src="~/assets/js/glightbox.min.js"></script>
     <script src="~/assets/js/main.js"></script>
+
+    <script src="~/js/chat-widget.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
